implemented partly GraphFacade. Implemented visualisation of Graph partly.